# web-relay-telegram-bot

./: .env-sample  .gitignore  LICENCE  README.md  pyproject.toml
src/com/dkgndianko/core/: config.py  logging.py
src/com/dkgndianko/telegram/bot/: persistence.py
src/com/dkgndianko/telegram/bot/web_relay/: app.py  entry_point.py  states.py
src/com/dkgndianko/telegram/bot/web_relay/handlers/: migration.py  relays.mmd  relays.py  start.py
